# skullcard

./: .cursorignore  .gitignore  READING_LIST.md  README.md  firebase.json  firestore.rules  index.html  integration.test.js  merkle.js  merkle.test.js  package-lock.json  package.json
circom_circuit/: README.md  circuit.test.js  package-lock.json  package.json  verify.py
circom_circuit/shuffle_js/: shuffle.wasm
functions/: index.js  integration.assignNextTurn.stress.test.js  integration.betAndTriggers.test.js  integration.edgecases.test.js  integration.folding.test.js  integration.fullHandCycle.test.js  integration.leaveGame.test.js  integrationTestUtilsV2.js  jest.config.js  package-lock.json  package.json  playerCallsV2.js  poker.js  poker.test.js  pot.js  pot.test.js  schedulersV2.js  updateTriggersV2.js
rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  api.test.js  main.rs  package.json  router.rs  services.rs
rust/circuit/: Cargo.toml  README.md
rust/circuit/pkg/: halo_circuit.d.ts  halo_circuit.js  halo_circuit_bg.wasm  halo_circuit_bg.wasm.d.ts  package.json
rust/circuit/src/: circuit.rs  lib.rs  main.rs  poseidon_bn256.rs  poseidon_hash.rs  prover.rs  tests.rs  wasm.rs
rust/circuit/web/: index.html  jest.config.js  main.js  package-lock.json  package.json
rust/circuit/web/__tests__/: verifier.test.js
src/: App.svelte  app.css
src/lib/: BetSelectorV2.svelte  Card.svelte  CustomButtom.svelte  GlowingCard.svelte  GlowingPhrase.svelte  GlowingPot.svelte  GlowingRow.svelte  (+4 more)
zk/rust/: Cargo.toml  Dockerfile  README.md  main.rs  package-lock.json  router.rs  services.rs
(+10 files in other folders)
