[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "main.rs"

[dependencies]
axum           = { version = "0.8", features = ["json"] }
serde          = { version = "1",   features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1",   features = ["macros", "rt-multi-thread", "net"] }
num-bigint     = "0.4"
rand           = "0.8"
light-poseidon = "0.2"
ark-bn254      = "0.4"
ark-ff         = "0.4"
